# dataclasses-avroschema

./: .flake8  .gitignore  .travis.yml  404.html  CHANGELOG.md  LICENSE  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  setup.cfg  setup.py  sitemap.xml
.benchmarks/Darwin-CPython-3.14-64bit/: 0001_548a3e711b15c5bf4abd80c2d7c47bf4f2191081_20251216_192849_uncommited-changes.json  0002_548a3e711b15c5bf4abd80c2d7c47bf4f2191081_20251216_193747_uncommited-changes.json
.benchmarks/Linux-CPython-3.13-64bit/: 0001_d26e1b227cb3874d2accbf09556d21e51e9c0592_20260327_125747.json  0002_5c88f4752c3c550fd5fee5dc4bdcfbde96e7df4a_20260424_133835.json  0003_c6a52b37d0fb035a9168689b5a7a7dec22e0a667_20260430_151228.json  0004_52fa3718e7e693742beed34af600f80a9afff00b_20260501_144912.json
.github/: FUNDING.yml  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: bench-compare.yaml  bench-release.yml  bump_version.yaml  check-commit-message.yaml  docs-preview.yaml  docs-publish.yaml  docs-test.yaml  publish.yaml  python-package.yml  tests.yaml
avro_schema/: index.html
case/: index.html
complex_types/: index.html
dataclasses_avroschema/: __init__.py  avrodantic.py  case.py  dacite_config.py  exceptions.py  faker.py  faust.py  field_utils.py  fields.py  main.py  parser.py  protocol.py  schema_definition.py  schema_generator.py  serialization.py  types.py  utils.py  version.py
dataclasses_avroschema/avrodantic/: __init__.py  fields.py
dataclasses_avroschema/faust/: __init__.py  main.py  parser.py
dataclasses_avroschema/field_mapper/: __init__.py  base_mapper.py  mapper.py  pydantic_mapper.py
dataclasses_avroschema/fields/: base.py  field_utils.py  fields.py  mapper.py  pydantic_fields.py
dataclasses_avroschema/model_generator/: avro_to_python_utils.py  base_class.py  generator.py  templates.py
dataclasses_avroschema/pydantic/: __init__.py  fields.py  main.py  mapper.py  parser.py
dataclasses_schema_generator/: fields.py  schema_definition.py  schema_generator.py
docs/: avro_schema.md  case.md  complex_types.md  examples.md  factories_and_fixtures.md  fake_instances_and_testing.md  faust_records.md  fields.md  fields_specification.md  good_practices.md  index.md  kafka_examples.md  logical_types.md  migration_guide.md  model_generator.md  primitive_types.md  pydantic.md  pydantic_v1.md  records.md  redis_examples.md  schema_relationships.md  serialization.md
examples/: Makefile  README.md  docker-compose.yaml  index.html  requirements.txt  schema_evolution_example.py
examples/kafka-examples/: Makefile  README.md  aiokafka_example.py  kafka_python_example.py  schema_evolution_example.py
examples/kafka-examples/aiokafka-example/: pyproject.toml
examples/kafka-examples/aiokafka-example/aiokafka_example/: app.py
examples/kafka-examples/kafka-python-example/: pyproject.toml
examples/kafka-examples/kafka-python-example/kafka_python_example/: app.py
examples/rabbitmq-examples/: README.md  docker-compose.yaml
examples/rabbitmq-examples/rabbitmq-pika/: pyproject.toml
examples/rabbitmq-examples/rabbitmq-pika/rabbitmq_pika/: app.py
examples/redis-examples/: Makefile  README.md  docker-compose.yaml  redis_gears_example.py  redis_stream_example.py  requirements.txt
examples/redis-examples/redis-streams-example/: pyproject.toml
examples/redis-examples/redis-streams-example/redis_streams_example/: app.py
factories_and_fixtures/: index.html
faust_records/: index.html
fields_specification/: index.html
good_practices/: index.html
kafka_examples/: index.html
logical_types/: index.html
migration_guide/: index.html
model_generator/: index.html
pr-preview/pr-191/: sitemap.xml
pr-preview/pr-193/: 404.html  sitemap.xml
pr-preview/pr-197/: index.html
pr-preview/pr-198/: index.html
pr-preview/pr-201/: index.html  sitemap.xml
pr-preview/pr-205/: index.html
pr-preview/pr-206/: 404.html
pr-preview/pr-211/: sitemap.xml
pr-preview/pr-218/: sitemap.xml
pr-preview/pr-224/: 404.html
pr-preview/pr-227/: 404.html  index.html  sitemap.xml
pr-preview/pr-228/: index.html
pr-preview/pr-230/: 404.html
pr-preview/pr-231/: index.html  sitemap.xml
pr-preview/pr-236/: 404.html  sitemap.xml
pr-preview/pr-238/: index.html
pr-preview/pr-244/: 404.html  index.html
pr-preview/pr-245/: 404.html  sitemap.xml
pr-preview/pr-252/: sitemap.xml
pr-preview/pr-264/: index.html
pr-preview/pr-271/: index.html  sitemap.xml
pr-preview/pr-274/: 404.html  index.html
pr-preview/pr-294/: index.html  sitemap.xml
pr-preview/pr-297/: index.html  sitemap.xml
pr-preview/pr-303/: 404.html
pr-preview/pr-321/: index.html  sitemap.xml
pr-preview/pr-322/: 404.html
pr-preview/pr-332/: 404.html
pr-preview/pr-364/: 404.html
pr-preview/pr-374/: index.html
pr-preview/pr-410/: index.html
pr-preview/pr-427/: index.html
pr-preview/pr-450/: index.html
pr-preview/pr-455/: 404.html
pr-preview/pr-481/: 404.html
pr-preview/pr-491/: index.html
pr-preview/pr-492/: 404.html
pr-preview/pr-500/: index.html
pr-preview/pr-503/: index.html
pr-preview/pr-506/: 404.html
pr-preview/pr-524/: index.html
pr-preview/pr-525/: 404.html  index.html
pr-preview/pr-538/: index.html
pr-preview/pr-542/: index.html
pr-preview/pr-546/: index.html
pr-preview/pr-565/: 404.html
pr-preview/pr-566/: 404.html
pr-preview/pr-571/: 404.html
pr-preview/pr-578/: 404.html  index.html
pr-preview/pr-586/: 404.html
pr-preview/pr-599/: index.html
pr-preview/pr-614/: 404.html
primitive_types/: index.html
pydantic/: index.html
pydantic_v1/: index.html
records/: index.html
redis_examples/: index.html
schema_relationships/: index.html
scripts/: README.md  bench-compare  bench-current  clean  clean.sh  format  lint  lint.sh  publish  publish.sh  tag  test  test-documentation  test.sh
search/: search_index.json
serialization/: index.html
tests/: conftest.py  test_benchmarks.py  test_fields.py  test_nested_schemas.py  test_recursive_schemas.py  test_schema.py  test_schema_parse.py  utils.py
(+803 files in other folders)
