[tool.poetry]
name = "kafka-python-example"
version = "0.1.0"
description = ""
authors = ["marcosschroh <schrohm@gmail.com>"]
packages = [{include = "kafka_python_example"}]

[tool.poetry.dependencies]
python = "^3.9"
kafka-python = "^2.0.2"
dataclasses-avroschema = { path = "../../../.", develop = true }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
app = "kafka_python_example.app:main"
